welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:13: error: Unmatched closing brace '}' ignored here
	avance()}
                ^PictureMono:17: error: Unmatched closing brace '}' ignored here
	avance()}
                ^