welcome.lessons.welcome.methods.picture.PictureMono.scala.code
override def run() {

	faireV()
}

def faireV(){
	avance()
	baisseBrosse()
	leveBrosse()
	gauche()
	avance()
	droite()
	avance()}
	baisseBrosse()
	leveBrosse()
	droite()
	avance()}
	baisseBrosse()
	leveBrosse()
	}

